WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115170
[Windows] Compile fix.
https://bugs.webkit.org/show_bug.cgi?id=115170
Summary
[Windows] Compile fix.
peavo
Reported
2013-04-25 05:18:56 PDT
The WinCairo compilation of JavaScriptCore fails with the following errors: C:\Program Files (x86)\Microsoft Visual Studio 2005\VC\include\intrin.h(944) : error C2733: second C linkage of overloaded function '_interlockedbittestandset' not allowed C:\Program Files (x86)\Microsoft Visual Studio 2005\VC\include\intrin.h(944) : see declaration of '_interlockedbittestandset' C:\Program Files (x86)\Microsoft Visual Studio 2005\VC\include\intrin.h(945) : error C2733: second C linkage of overloaded function '_interlockedbittestandreset' not allowed C:\Program Files (x86)\Microsoft Visual Studio 2005\VC\include\intrin.h(945) : see declaration of '_interlockedbittestandreset'
Attachments
Patch
(981 bytes, patch)
2013-04-25 05:25 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-04-25 05:25:12 PDT
Created
attachment 199654
[details]
Patch
WebKit Commit Bot
Comment 2
2013-04-25 09:38:50 PDT
Comment on
attachment 199654
[details]
Patch Clearing flags on attachment: 199654 Committed
r149116
: <
http://trac.webkit.org/changeset/149116
>
WebKit Commit Bot
Comment 3
2013-04-25 09:38:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug