[Windows] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=115170

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-04-25
Reviewed by Filip Pizlo.

Forward declare function, instead of including intrin.h.

* wtf/Atomics.h:

Canonical link: https://commits.webkit.org/133613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149116 268f45cc-cd09-0410-ab3c-d52691b4dbfc